# gml2step

./: .dockerignore  .gitignore  Dockerfile  README.ja.md  README.md  coverage.xml  pyproject.toml  test_e2e_verify.py
.github/workflows/: ci.yml
docs/: README.md
docs/src/content/docs/en/: architecture.md  cli.md  configuration.md  conversion.md  development.md  plateau.md
docs/src/content/docs/ja/: architecture.md  cli.md  configuration.md  conversion.md  development.md  plateau.md
src/gml2step/: __init__.py  api.py  cli.py
src/gml2step/citygml/lod/: footprint_extractor.py
src/gml2step/citygml/pipeline/: orchestrator.py
src/gml2step/citygml/transforms/: crs_detection.py
src/gml2step/citygml/utils/: logging.py
src/gml2step/plateau/: __init__.py  api_client.py  fetcher.py
tests/: test_api.py  test_cli.py  test_coordinate_optimizer.py  test_crs_detection.py  test_fetcher_utils.py  test_polygons.py  test_streaming.py
