[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gml2step"
version = "0.1.0"
description = "CityGML parsing and STEP conversion toolkit extracted from Paper-CAD"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "Paper-CAD Contributors" }]
dependencies = [
    "typer>=0.12.0",
    "pyproj>=3.6.0",
]

[project.optional-dependencies]
plateau = [
    "requests>=2.31.0",
    "shapely>=2.0.0",
    "aiohttp>=3.9.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
gml2step = "gml2step.cli:app"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["gml2step*"]

[tool.setuptools.package-data]
gml2step = ["data/*.json"]

